--- a/trunk/webapps/.classpath
+++ b/trunk/webapps/.classpath
@@ -36,5 +36,8 @@
 	<classpathentry kind="lib" path="root/WEB-INF/lib/struts2-core-2.2.1.jar"/>
 	<classpathentry kind="lib" path="root/WEB-INF/lib/wstx-asl-3.2.7.jar"/>
 	<classpathentry kind="lib" path="root/WEB-INF/lib/xwork-core-2.2.1.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/caliph-emir-cbir.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/Jama-1.0.2.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/lire.jar"/>
 	<classpathentry kind="output" path="root/WEB-INF/classes"/>
 </classpath>
