--- a/trunk/webapps/root/WEB-INF/web.xml
+++ b/trunk/webapps/root/WEB-INF/web.xml
@@ -29,7 +29,9 @@
 	<listener>
 		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
 	</listener>
-
+	<listener>
+		<listener-class>org.rivu.image.web.listener.WebApplicationContextListener</listener-class>
+	</listener>
 
   <filter>
 		<filter-name>struts</filter-name>
