--- a/trunk/webapps/.classpath
+++ b/trunk/webapps/.classpath
@@ -4,9 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="com.genuitec.eclipse.j2eedt.core.J2EE14_CONTAINER"/>
 	<classpathentry kind="lib" path="root/WEB-INF/lib/antlr-2.7.2.jar"/>
-	<classpathentry kind="lib" path="root/WEB-INF/lib/apache-solr-core-1.4.1.jar"/>
-	<classpathentry kind="lib" path="root/WEB-INF/lib/apache-solr-dataimporthandler-1.4.1.jar"/>
-	<classpathentry kind="lib" path="root/WEB-INF/lib/apache-solr-solrj-1.4.1.jar"/>
 	<classpathentry kind="lib" path="root/WEB-INF/lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="root/WEB-INF/lib/commons-csv-1.0-SNAPSHOT-r609327.jar"/>
 	<classpathentry kind="lib" path="root/WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
@@ -17,14 +14,6 @@
 	<classpathentry kind="lib" path="root/WEB-INF/lib/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
 	<classpathentry kind="lib" path="root/WEB-INF/lib/javassist.jar"/>
 	<classpathentry kind="lib" path="root/WEB-INF/lib/jcl-over-slf4j-1.5.5.jar"/>
-	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-analyzers-2.9.3.jar"/>
-	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-core-2.9.3.jar"/>
-	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-highlighter-2.9.3.jar"/>
-	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-memory-2.9.3.jar"/>
-	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-misc-2.9.3.jar"/>
-	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-queries-2.9.3.jar"/>
-	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-snowball-2.9.3.jar"/>
-	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-spellchecker-2.9.3.jar"/>
 	<classpathentry kind="lib" path="root/WEB-INF/lib/ognl-3.0.jar"/>
 	<classpathentry kind="lib" path="root/WEB-INF/lib/slf4j-api-1.5.5.jar"/>
 	<classpathentry kind="lib" path="root/WEB-INF/lib/slf4j-jdk14-1.5.5.jar"/>
@@ -40,5 +29,28 @@
 	<classpathentry kind="lib" path="root/WEB-INF/lib/Jama-1.0.2.jar"/>
 	<classpathentry kind="lib" path="root/WEB-INF/lib/lire.jar"/>
 	<classpathentry kind="lib" path="root/WEB-INF/lib/je-4.1.6.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/apache-solr-core-4.0-2010-12-17_08-05-54.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/apache-solr-dataimporthandler-4.0-2010-12-17_08-05-54.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/apache-solr-noggit-r944541.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/apache-solr-solrj-4.0-2010-12-17_08-05-54.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/commons-csv-1.0-SNAPSHOT-r966014.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/guava-r05.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/log4j-over-slf4j-1.5.5.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-analyzers-common-4.0-2010-12-17_08-05-54.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-analyzers-phonetic-4.0-2010-12-17_08-05-54.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-core-4.0-2010-12-17_08-05-54.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-highlighter-4.0-2010-12-17_08-05-54.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-memory-4.0-2010-12-17_08-05-54.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-misc-4.0-2010-12-17_08-05-54.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-queries-4.0-2010-12-17_08-05-54.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-spatial-4.0-2010-12-17_08-05-54.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/lucene-spellchecker-4.0-2010-12-17_08-05-54.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/velocity-1.6.4.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/velocity-tools-2.0.jar"/>
+	<classpathentry kind="lib" path="root/WEB-INF/lib/zookeeper-3.3.1.jar"/>
 	<classpathentry kind="output" path="root/WEB-INF/classes"/>
 </classpath>
